tests/src/frontend/syntax/invalid/dot_string_concatenation.sk
fun main(): String {
  "string" . "string"
}
